@@ -21,8 +21,8 @@ except ImportError:
     from sqlite3 import IntegrityError as DatabaseIntegrityError
     from sqlite3 import OperationalError as DatabaseOperationalError
 from sql import Flavor, Table
-from sql.functions import (Function, Extract, Position, Now, Substring,
-    Overlay, CharLength)
+from sql.functions import (Function, Extract, Position, Substring,
+    Overlay, CharLength, CurrentTimestamp)
 
 __all__ = ['Database', 'DatabaseIntegrityError', 'DatabaseOperationalError',
     'Cursor']
@@ -138,6 +138,11 @@ class SQLiteCharLength(Function):
     _function = 'LENGTH'
 
 
+class SQLiteCurrentTimestamp(Function):
+    __slots__ = ()
+    _function = 'NOW'  # More precise
+
+
 def sign(value):
     if value > 0:
         return 1
@@ -153,6 +158,7 @@ MAPPING = {
     Substring: SQLiteSubstring,
     Overlay: SQLiteOverlay,
     CharLength: SQLiteCharLength,
+    CurrentTimestamp: SQLiteCurrentTimestamp,
     }
 
 
@@ -307,7 +313,7 @@ class Database(DatabaseInterface):
             insert = ir_module.insert(
                 [ir_module.create_uid, ir_module.create_date, ir_module.name,
                     ir_module.state],
-                [[0, Now(), module, state]])
+                [[0, CurrentTimestamp(), module, state]])
             cursor.execute(*insert)
             cursor.execute('SELECT last_insert_rowid()')
             module_id, = cursor.fetchone()
@@ -317,7 +323,7 @@ class Database(DatabaseInterface):
                         ir_module_dependency.create_date,
                         ir_module_dependency.module, ir_module_dependency.name
                         ],
-                    [[0, Now(), module_id, dependency]])
+                    [[0, CurrentTimestamp(), module_id, dependency]])
                 cursor.execute(*insert)
 
 
